# Source - https://stackoverflow.com/a/54701434
# Posted by Robert Hafner, modified by community. See post 'Timeline' for change history
# Retrieved 2025-11-14, License - CC BY-SA 4.0

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    'OceansEnv @ git+https://github.com/james-stewart-808/OceansEnv',
]

#[project.optional-dependencies]
#dev = ['ExtraExample @ git+ssh://git@github.com/example_org/ExtraExample.git']
